--- a/public/login.html
+++ b/public/login.html
@@ -1,54 +1,135 @@
-<script>
-  document.addEventListener('DOMContentLoaded', async function() {
-    const loadEl = document.querySelector('#load');
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Login Required</title>
+  <script defer src="/__/firebase/11.6.1/firebase-app-compat.js"></script>
+  <script defer src="/__/firebase/11.6.1/firebase-auth-compat.js"></script>
+  <script defer src="/__/firebase/init.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background: #f5f5f5;
+    }
+    .login-container {
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+    .login-btn {
+      background: #4285F4;
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      border-radius: 4px;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+  </style>
+</head>
+<body>
+  <div class="login-container">
+    <h1>Welcome to Recipe App</h1>
+    <p>Please sign in to continue</p>
 
-    try {
-      let app = firebase.app();
-      let features = [
-        'auth',
-      ].filter(feature => typeof app[feature] === 'function');
-      loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
+    <input type="email" id="email" placeholder="Email" style="margin-bottom: 10px; padding: 10px; width: 100%; box-sizing: border-box;">
+    <input type="password" id="password" placeholder="Password" style="margin-bottom: 10px; padding: 10px; width: 100%; box-sizing: border-box;">
 
-      // Set up Google provider
-      const provider = new firebase.auth.GoogleAuthProvider();
+    <button class="login-btn" id="emailLogin">Sign in with Email</button>
 
-      // Check if already logged in
+    <p style="margin: 15px 0;">OR</p>
+
+    <button class="login-btn" id="googleLogin">Sign in with Google</button>
+
+    <button class="login-btn" id="signupBtn" style="background: #34A853;">Sign Up (Email)</button>
+
+  </div>
+
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
       firebase.auth().onAuthStateChanged(user => {
         if (user) {
-          // If user is logged in, go to homepage
-          window.location.href = '/index.html';
-        } else {
-          // If not logged in, create a login button
-          const loginButton = document.createElement('button');
-          loginButton.textContent = 'Sign in with Google';
-          loginButton.style.padding = '10px';
-          loginButton.style.marginTop = '20px';
-          loginButton.style.display = 'block';
-          loginButton.style.width = '100%';
-          loginButton.style.background = '#4285F4';
-          loginButton.style.color = 'white';
-          loginButton.style.border = 'none';
-          loginButton.style.borderRadius = '4px';
-          loginButton.style.fontSize = '16px';
-          loginButton.style.cursor = 'pointer';
-
-          loginButton.addEventListener('click', async () => {
-            try {
-              await firebase.auth().signInWithPopup(provider);
-              window.location.href = '/index.html';
-            } catch (error) {
-              console.error(error);
-              alert('Login Failed: ' + error.message);
-            }
-          });
-
-          document.querySelector('#message').appendChild(loginButton);
+          window.location.href = '/';
         }
       });
+  
+      // Google login
+      document.getElementById('googleLogin').addEventListener('click', () => {
+        const provider = new firebase.auth.GoogleAuthProvider();
+        firebase.auth().signInWithPopup(provider)
+          .then(() => {
+            window.location.href = '/';
+          })
+          .catch(error => {
+            console.error('Login error:', error);
+            alert('Google login failed. Please try again.');
+          });
+      });
+  
+      // Email/password login
+      document.getElementById('emailLogin').addEventListener('click', () => {
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+  
+        if (!email || !password) {
+          alert('Please fill in both email and password.');
+          return;
+        }
+  
+        firebase.auth().signInWithEmailAndPassword(email, password)
+          .then(() => {
+            window.location.href = '/';
+          })
+          .catch(error => {
+            console.error('Email login error:', error);
+            if (error.code === 'auth/user-not-found') {
+              alert('No user found with this email.');
+            } else if (error.code === 'auth/wrong-password') {
+              alert('Wrong password.');
+            } else {
+              alert('Login failed. Please try again.');
+            }
+          });
+      });
+  
+      // 🆕 Email/password signup
+      document.getElementById('signupBtn').addEventListener('click', () => {
+        const email = document.getElementById('email').value;
+        const password = document.getElementById('password').value;
+  
+        if (!email || !password) {
+          alert('Please fill in both email and password.');
+          return;
+        }
+  
+        firebase.auth().createUserWithEmailAndPassword(email, password)
+          .then(() => {
+            alert('Signup successful! You are now logged in.');
+            window.location.href = '/';
+          })
+          .catch(error => {
+            console.error('Signup error:', error);
+            if (error.code === 'auth/email-already-in-use') {
+              alert('Email already in use. Please login instead.');
+            } else if (error.code === 'auth/weak-password') {
+              alert('Password should be at least 6 characters.');
+            } else {
+              alert('Signup failed. Please try again.');
+            }
+          });
+      });
+    });
+  </script>
+  
+</body>
 
-    } catch (e) {
-      console.error(e);
-      loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-    }
-  });
-</script>
+</html>
