--- a/public/login.html
+++ b/public/login.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html>
+<!-- <!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Login Required</title>
-  <script defer src="/__/firebase/11.6.1/firebase-app-compat.js"></script>
-  <script defer src="/__/firebase/11.6.1/firebase-auth-compat.js"></script>
-  <script defer src="/__/firebase/init.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login - Recipe App</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -32,102 +29,67 @@
       border-radius: 4px;
       font-size: 16px;
       cursor: pointer;
-      margin-top: 20px;
+      margin-top: 10px;
     }
   </style>
 </head>
 <body>
   <div class="login-container">
-    <h1>Welcome to Recipe App</h1>
+    <h1>Recipe App</h1>
     <p>Please sign in to continue</p>
 
-    <input type="email" id="email" placeholder="Email" style="margin-bottom: 10px; padding: 10px; width: 100%; box-sizing: border-box;">
-    <input type="password" id="password" placeholder="Password" style="margin-bottom: 10px; padding: 10px; width: 100%; box-sizing: border-box;">
+    <input type="email" id="email" placeholder="Email" style="margin-bottom:10px;padding:10px;width:100%;box-sizing:border-box;">
+    <input type="password" id="password" placeholder="Password" style="margin-bottom:10px;padding:10px;width:100%;box-sizing:border-box;">
 
     <button class="login-btn" id="emailLogin">Sign in with Email</button>
 
-    <p style="margin: 15px 0;">OR</p>
+    <p style="margin:15px 0;">OR</p>
 
     <button class="login-btn" id="googleLogin">Sign in with Google</button>
 
-    <button class="login-btn" id="signupBtn" style="background: #34A853;">Sign Up (Email)</button>
-
+    <button class="login-btn" id="signupBtn" style="background:#34A853;">Sign Up (Email)</button>
   </div>
 
-  <script>
+  <script type="module">
+    import { auth, provider } from './src/firebase.js';
+    import { signInWithEmailAndPassword, createUserWithEmailAndPassword, signInWithPopup, onAuthStateChanged } from 'firebase/auth';
+
     document.addEventListener('DOMContentLoaded', () => {
-      firebase.auth().onAuthStateChanged(user => {
+      onAuthStateChanged(auth, user => {
         if (user) {
-          window.location.href = '/';
+          window.location.href = '/index.html';
         }
       });
-  
-    
+
       document.getElementById('googleLogin').addEventListener('click', () => {
-        const provider = new firebase.auth.GoogleAuthProvider();
-        firebase.auth().signInWithPopup(provider)
-          .then(() => {
-            window.location.href = '/';
-          })
-          .catch(error => {
-            console.error('Login error:', error);
-            alert('Google login failed. Please try again.');
-          });
+        signInWithPopup(auth, provider)
+          .then(() => window.location.href = '/index.html')
+          .catch(error => alert('Google login failed: ' + error.message));
       });
-  
+
       document.getElementById('emailLogin').addEventListener('click', () => {
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
-  
-        if (!email || !password) {
-          alert('Please fill in both email and password.');
-          return;
-        }
-  
-        firebase.auth().signInWithEmailAndPassword(email, password)
-          .then(() => {
-            window.location.href = '/';
-          })
-          .catch(error => {
-            console.error('Email login error:', error);
-            if (error.code === 'auth/user-not-found') {
-              alert('No user found with this email.');
-            } else if (error.code === 'auth/wrong-password') {
-              alert('Wrong password.');
-            } else {
-              alert('Login failed. Please try again.');
-            }
-          });
+        if (!email || !password) return alert('Please fill in both fields.');
+
+        signInWithEmailAndPassword(auth, email, password)
+          .then(() => window.location.href = '/index.html')
+          .catch(error => alert('Login failed: ' + error.message));
       });
 
       document.getElementById('signupBtn').addEventListener('click', () => {
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
-  
-        if (!email || !password) {
-          alert('Please fill in both email and password.');
-          return;
-        }
-  
-        firebase.auth().createUserWithEmailAndPassword(email, password)
+        if (!email || !password) return alert('Please fill in both fields.');
+
+        createUserWithEmailAndPassword(auth, email, password)
           .then(() => {
-            alert('Signup successful! You are now logged in.');
-            window.location.href = '/';
+            alert('Signup successful!');
+            window.location.href = '/index.html';
           })
-          .catch(error => {
-            console.error('Signup error:', error);
-            if (error.code === 'auth/email-already-in-use') {
-              alert('Email already in use. Please login instead.');
-            } else if (error.code === 'auth/weak-password') {
-              alert('Password should be at least 6 characters.');
-            } else {
-              alert('Signup failed. Please try again.');
-            }
-          });
+          .catch(error => alert('Signup failed: ' + error.message));
       });
     });
   </script>
-  
 </body>
-
-</html>
+</html> -->
